--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -28,6 +28,7 @@
     border-radius: 5px;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
     transform: scale(1);
+    margin-bottom: 20px;
     transition: all 0.5s ease-in;
 }
 .NewsCard:hover{
